# MoyMoy2

./: .gitignore  DEV.md
app-mobile/apps/com.mochi.moymoy/: dev.html  index.html  manifest.json  moymoy-sdk.js
app-mobile/apps/com.mochi.moymoy/wallet/: crystal.jsx  moymoy-auth.jsx  moymoy-screens.jsx  moymoy.jsx  wallet.css
deploy/: README.md  app.toml
mod/: build.gradle  gradle.properties  settings.gradle
mod/src/main/java/jp/houlab/mochidsuki/moymoy/: EmeraldOpStore.java  EmeraldUtil.java  MoyMoyExtension.java  MoyMoyMod.java
server/moymoy-cs/: Cargo.toml
server/moymoy-cs/src/: api.rs  auth.rs  charge.rs  command_bus.rs  error.rs  identity.rs  main.rs  otp.rs  tls.rs  tunnel.rs  wallet.rs
server/moymoy-cs/src/db/: mod.rs  schema.sql  schema_v2.sql  schema_v3.sql  schema_v4.sql
tools/: deploy-backend.ps1  dev-serve.ps1  make-icon.mjs  publish-moymoy.ps1  register-hub.ps1  run-cs.ps1
